1.2.11: 2003-08-18
	- added forcedClose window option (Hanspeter Roth)
	- added recent average in network monitor
        - fix icewmbg not setting theme background
	- fix spelling of _NET_WORKAREA hint (Jeff Pohlmeyer (tgeek))
        - fix spelling of --client-id option name (YAMAMOTO, Taku <taku@cent.saitama-u.ac.jp>)
	- fix random restart failures

1.2.10: 2003-08-11
	- added "Default" to Themes submenu
	- documentation updates

1.2.10pre11: 2003-08-10
	- theme selector now writes the selected theme in ~/.icewm/theme
	- theme selector now restarts icewmbg automatically
	- minor cleanups in apm applet
	- build fixes
	- Infadel2 theme cleanups (Hanspeter Roth)

1.2.10pre10: 2003-08-01
	- fixed icewmbg semtransparency support. icewmbg will no longer
          exit when semitransparency is enabled
	- major focus cleanups

1.2.10pre9: 2003-07-30
	- double buffering performance optimizations

1.2.10pre8: 2003-07-27
	- FIXED: taskbar tray location off by one pixel
	- FIXED: rendering of icons on big-endian systems when 
                 --enable-antialiasing

1.2.10pre7: 2003-07-26
	- FIXED: shaped windows when --enable-shaped-decorations
	- FIXED: icewmbg prefs now added to default preferences file

1.2.10pre6: 2003-07-25
	- FIXED: theme local font path with Xft/fontconfig
	- disabled movement of maximized windows offscreen (use shift to 
          override)
	- corefonts now enabled when Xft major version = 1

1.2.10pre5: 2003-07-24
	- FIXED: compile with --enable-corefonts
	- FIXED: compile with Xft v1
	- Dutch translation update by Reinout van Schouwen
	- added internal border to taskbar

1.2.10pre4: 2003-07-19
	- FIXED: problem with --enable-shaped-decorations and 
          full-screen windows (mplayer)
	- Italian translation update by Yuri Bongiorno

1.2.10pre3: 2003-07-13
	- implement support for depth 1 window icons
	- FIXED build with some compilers
	- painting is now double buffered (TODO: optional) and faster
	- Russian translation update (Anton B. Farygin)